--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "new": "cpp",
-        "exception": "cpp"
+        "exception": "cpp",
+        "string": "cpp",
+        "fstream": "cpp"
     }
 }
